# BI-ZUM-2024

./: .gitattributes  README.md
Domácí úkoly/Počítačové úlohy/Úloha 1/: maze.cpp
Domácí úkoly/Počítačové úlohy/Úloha 2/: Makefile  genetic.cpp
Domácí úkoly/Počítačové úlohy/Úloha 2/data/: distances-10.csv  distances-18.csv
Domácí úkoly/Počítačové úlohy/Úloha 3/Multi-agent Path Finding/: MAPF.pddl  sas_plan.1  sas_plan.2
Domácí úkoly/Počítačové úlohy/Úloha 3/The Travelling Purchase Problem/: TPP.pddl  TPP_config.pddl
Domácí_úkoly/Počítačové_úlohy/Úloha_3/Multi-agent Path Finding/: MAPF_config.pddl
Semestral work/src/: CMakeLists.txt  changeWorstSolver.cpp  changeWorstSolver.h  main.cpp  minimizeSolver.cpp  minimizeSolver.h  neighborSolver.cpp  neighborSolver.h  randomSolver.cpp  randomSolver.h  solvedGrids.h  sudokuSolver.cpp  sudokuSolver.h  unsolvedGrids.h
